added post request buttons for tables but needs some work

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "material-dashboard-2-react",
   "version": "2.2.0",
+  "proxy": "http://localhost:7294",
   "private": true,
   "author": "Creative Tim",
   "license": "See license in https://www.creative-tim.com/license",
