--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "material-dashboard-2-react",
   "version": "2.2.0",
-  "proxy": "http://localhost:7294",
   "private": true,
   "author": "Creative Tim",
   "license": "See license in https://www.creative-tim.com/license",
@@ -20,6 +19,7 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
